Production-ready deployment cleanup + backend fixes + frontend fixes
- Updated Django settings.py with WhiteNoise, PostgreSQL support, and environment-based configuration
- Added start.sh production startup script for Render deployment
- Updated requirements.txt with dj-database-url dependency
- Updated backend and frontend .env.example files with comprehensive production variables
- Configured CORS and CSRF settings to use environment variables
- Deleted unnecessary files (.env, runtime.txt, Procfile, check scripts, venv)
- Created comprehensive DEPLOYMENT.md guide for Render and Vercel
- Verified Django deployment checks pass successfully
- Verified frontend builds successfully

--- a/web-frontend/.env.example
+++ b/web-frontend/.env.example
@@ -1,5 +1,14 @@
+# ========================================
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8000/api
+# ========================================
+# For Production: Use your Render backend URL
+VITE_API_BASE_URL=https://your-backend.onrender.com/api
 
+# For Development: Use local backend
+# VITE_API_BASE_URL=http://localhost:8000/api
+
+# ========================================
 # Environment
-VITE_ENVIRONMENT=development
+# ========================================
+VITE_ENVIRONMENT=production
+
