--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,37 @@
-# Django stuff
-SECRET_KEY=django-insecure-change-this-in-production-very-long-random-string
-DEBUG=True
+# ========================================
+# Django Configuration
+# ========================================
+SECRET_KEY=your-secret-key-here-change-in-production-at-least-50-characters
+DEBUG=False
 
-# CORS
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# Comma-separated list of allowed hosts
+ALLOWED_HOSTS=localhost,127.0.0.1,.onrender.com
 
-# DB - uncomment if using postgres
-# DATABASE_URL=postgres://user:pass@localhost:5432/dbname
+# Comma-separated list of trusted origins (include both frontend and backend URLs)
+CSRF_TRUSTED_ORIGINS=https://your-frontend.vercel.app,https://your-backend.onrender.com,http://localhost:5173,http://localhost:3000
 
-# Gemini AI - get your key from https://aistudio.google.com/app/apikey
-GOOGLE_GEMINI_API_KEY=
+# ========================================
+# Database Configuration
+# ========================================
+# For Production (PostgreSQL on Render) - Render provides this automatically
+# DATABASE_URL=postgresql://user:password@host:5432/dbname
+# For Development (SQLite) - leave commented, will use default
 
-# Additional settings
+# ========================================
+# CORS Configuration
+# ========================================
+# Comma-separated list of allowed origins for CORS
+CORS_ALLOWED_ORIGINS=https://your-frontend.vercel.app,http://localhost:5173,http://localhost:3000
+
+# ========================================
+# AI Configuration
+# ========================================
+# Get your key from https://aistudio.google.com/app/apikey
+GOOGLE_GEMINI_API_KEY=your-gemini-api-key-here
+
+# ========================================
+# Optional Settings
+# ========================================
 # TIME_ZONE=UTC
 # LANGUAGE_CODE=en-us
+
