--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,7 +27,7 @@ CORS_ALLOWED_ORIGINS=https://your-frontend.vercel.app,http://localhost:5173,http
 # AI Configuration
 # ========================================
 # Get your key from https://aistudio.google.com/app/apikey
-GOOGLE_GEMINI_API_KEY=your-gemini-api-key-here
+GOOGLE_GEMINI_API_KEY= AIzaSyBN1IVuDk9bc6_1feWh2qDB6DNXUQ2quWI
 
 # ========================================
 # Optional Settings
